--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -16,7 +16,11 @@
     {{template "navbar" .}}
 
     <div class="container-fluid">
-		{{template "body" .}}
+    {{if .Alert}}
+      {{template "alert" .Alert}}
+    {{end}}
+
+		{{template "body" .Body}}
 
     {{template "footer" .}}
 	</div>
