--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -13,6 +13,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/contact">Contact</a>
       </li>
+      {{if .User}}
+      <li class="nav-item">
+        <a class="nav-link" href="/galleries">Galleries</a>
+      </li>
+      {{end}}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
