--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -1,59 +1,106 @@
 {{define "body"}}
 <div class="row">
-	<div class="col-md-10 col-md-offset-1">
-		<h2>Edit your gallery</h2>
-		<a href="/galleries/{{.ID}}">
-			View this gallery
-		</a>
-		<hr>
-	</div>
-<h3>Edit your gallery</h3>
-<form action="/galleries/{{.ID}}/update" method="POST">
-	<div class="form-group">
-		<label for="title">Title</label>
-		<input type="text" name="title" class="form-control" id="title" placeholder="What is the title of your gallery?" value="{{.Title}}">
-	</div>
-	<button type="submit" class="btn btn-primary">Update</button>
-</form>
-
-<form action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete" method="POST">
-	<button type="submit" class="btn btn-danger">Delete</button>
-</form>
-
-{{template "img"}}
-{{range .Img}}
-	<img src="{{.}}">
-{{end}}
-{{end}}
-
-{{define "img"}}
-<form action="/galleries/{{.ID}}/images" method="POST"
-	enctype="multipart/form-data" class="form-horizontal">
-	<div class="form-group">
-		<label for="images" class="col-md-1 control-label">Add Images</label>
-		<div class="col-md-10">
-			<input type="file" multiple="multiple" id="images" name="images">
-			<p class="help-block">Please only use jpg, jpeg, and png.</p>
-			<button type="submit" class="btn btn-primary">Upload</button>
-		</div>
-	</div>
-</form>
+  <div class="col-md-10 col-md-offset-1">
+    <h2>edit your gallery</h2>
+    <a href="/galleries/{{.ID}}">
+      view this gallery
+    </a>
+    <hr>
+  </div>
+  <div class="col-md-12">
+    {{template "editGalleryForm" .}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-1">
+    <label class="control-label pull-right">
+      Images
+    </label>
+  </div>
+  <div class="col-md-10">
+    {{template "galleryImages" .}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {{template "uploadImageForm" .}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {{template "deleteGalleryForm" .}}
+  </div>
 </div>
 {{end}}
 
-{{define "gallery"}}
-{{range .Split 6}}
-	<div class="col-md-2">
-		{{range .}}
-			<a href="{{.Path}}">
-				<img src="{{.Path}}" class="thumbnail">
-			</a>
-		{{end}}
-	</div>
+{{define "editGalleryForm"}}
+<form action="/galleries/{{.ID}}/update" method="POST"
+  class="form-horizontal">
+  <div class="form-group">
+    <label for="title" class="col-md-1 control-label">Title</label>
+    <div class="col-md-10">
+      <input type="text" name="title" class="form-control" id="title"
+        placeholder="What is the title of your gallery?" value="{{.Title}}">
+    </div>
+    <div class="col-md-1">
+      <button type="submit" class="btn btn-primary">save</button>
+    </div>
+  </div>
+</form>
 {{end}}
-<style>
-	.thumbnail {
-		width: 100%;
-	}
-</style>
+
+{{define "deleteGalleryForm"}}
+<form action="/galleries/{{.ID}}/delete" method="POST"
+  class="form-horizontal">
+  <div class="form-group">
+    <div class="col-md-10 col-md-offset-1">
+      <button type="submit" class="btn btn-danger">delete</button>
+    </div>
+  </div>
+</form>
+{{end}}
+
+{{define "uploadImageForm"}}
+<form action="/galleries/{{.ID}}/images" method="POST"
+  enctype="multipart/form-data" class="form-horizontal">
+  <div class="form-group">
+    <label for="images" class="col-md-1 control-label">Add images</label>
+    <div class="col-md-10">
+      <input type="file" multiple="multiple" id="images" name="images">
+      <p class="help-block">jpg, jpeg, png</p>
+      <button type="submit" class="btn btn-primary">upload</button>
+    </div>
+  </div>
+</form>
+{{end}}
+
+{{define "galleryImages"}}
+  {{range .Split 6}}
+    <div class="col-md-2">
+      {{range .}}
+        <a href="{{.Path}}">
+          <img src="{{.Path}}" class="thumbnail">
+        </a>
+        {{template "deleteImageForm" .}}
+      {{end}}
+    </div>
+  {{end}}
+  <style>
+    .thumbnail {
+      width: 100%;
+      margin-bottom: 6px;
+    }
+    .btn-delete {
+      margin-bottom: 6px;
+    }
+  </style>
+{{end}}
+
+{{define "deleteImageForm"}}
+<form action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete"
+  method="POST">
+  <button type="submit" class="btn btn-default btn-delete">
+    delete
+  </button>
+</form>
 {{end}}
