--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -1,26 +1,26 @@
 {{define "body"}}
 <div class="row">
-	<div class="col-md-12">
-		<h1>
-			{{.Title}}
-		</h1>
-		<hr>
-	</div>
+  <div class="col-md-12">
+    <h1>
+      {{.Title}}
+    </h1>
+    <hr>
+  </div>
 </div>
 <div class="row">
-	{{range .ImagesSplitN 3}}
-		<div class="col-md-4">
-			{{range .}}
-				<a href="{{.Path}}">
-					<img src="{{.Path}}" class="thumbnail">
-				</a>
-			{{end}}
-		</div>
-	{{end}}
+  {{range .Split 3}}
+    <div class="col-md-4">
+      {{range .}}
+        <a href="{{.Path}}">
+          <img src="{{.Path}}" class="thumbnail">
+        </a>
+      {{end}}
+    </div>
+  {{end}}
 </div>
 <style>
-	.thumbnail {
-		width: 100%;
-	}
+  .thumbnail {
+    width: 100%;
+  }
 </style>
 {{end}}
